--- a/_sources/ch04/note03B.ipynb
+++ b/_sources/ch04/note03B.ipynb
@@ -448,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{admonition} **Vibrational degrees of freedom in molecules **\n",
+    ":::{admonition} **Vibrational degrees of freedom in molecules**\n",
     ":class: important\n",
     "\n",
     "- **Linear** Molecules with N atoms:\n",
@@ -466,47 +466,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Selection rules\n",
+    "### Selection rules and Transition Dipole Moment\n",
     "\n",
     "- Selection rules in spectroscopy are fundamental principles that dictate whether a transition is allowed or forbidden during the absorption or emission of electromagnetic radiation, such as infrared (IR) or Raman spectroscopy. The origins of these rules lie in the quantum mechanical description of molecular vibrations and the interactions of molecules with electromagnetic radiation. Meaning is that the light can induce coupling between the initial and final quantum states\n",
     "\n",
-    "- Molecular symmetry plays a crucial role in determining the allowed transitions.\n",
-    "Symmetry considerations, especially in molecules, come from group theory, which helps in predicting whether a certain vibrational mode will be IR or Raman active.\n",
+    "- In spectroscopy, **allowed transitions** are those with a **non-zero transition dipole moment** between the initial and final states.\n",
     "\n",
-    "- Not all diatomic molecules have vibrational absorption spectrum becasue of **the selection rules**\n",
-    "\n",
-    "\n",
-    "\n",
-    "### Transition Dipole Moment\n",
-    "\n",
-    "In spectroscopy, **allowed transitions** are those with a **non-zero transition dipole moment** between the initial and final states.\n",
-    "\n",
-    "Mathematically, the molecular dipole moment can be expanded around its equilibrium geometry ( R_e ):\n",
+    "- Mathematically, the molecular dipole moment can be expanded around its equilibrium geometry $R_e$. Here we will use dispacelent from equilibrum geometry $x = R - R_e$ for convenience,\n",
     "\n",
     "$$\n",
-    "\\mu_z(R) = \\mu_e\n",
-    "\n",
-    "\\cdot \\left( \\frac{\\partial \\mu}{\\partial R} \\right)_{R_e} (R - R_e)\n",
-    "\\cdot \\frac{1}{2} \\left( \\frac{\\partial^2 \\mu}{\\partial R^2} \\right)_{R_e} (R - R_e)^2 + \\dots\n",
+    "\\mu_z(x) = \\mu_e + \\left( \\frac{\\partial \\mu}{\\partial x} \\right)_{R_e} x+\n",
+    "\\cdot \\frac{1}{2} \\left( \\frac{\\partial^2 \\mu}{\\partial x^2} \\right)_{R_e} x^2 + \\dots\n",
     "  $$\n",
     "\n",
-    "Using $x = R - R_e$ for convenience, the transition dipole matrix element between vibrational states $|v\\rangle$ and $|v'\\rangle$ becomes:\n",
+    "- the transition dipole matrix element between vibrational states $|v\\rangle$ and $|v'\\rangle$ becomes:\n",
     "\n",
     "$$\n",
-    "\\langle v | \\mu_z | v' \\rangle\n",
-    "= \\mu_e \\langle v | v' \\rangle\n",
-    "\n",
-    "\\cdot \\left( \\frac{\\partial \\mu}{\\partial R} \\right)_{R_e} \\langle v | x | v' \\rangle\n",
-    "\\cdot \\frac{1}{2} \\left( \\frac{\\partial^2 \\mu}{\\partial R^2} \\right)_{R_e} \\langle v | x^2 | v' \\rangle\n",
-    "\\cdot \\dots\n",
+    "\\langle v | \\mu_z | v' \\rangle = \\mu_e \\langle v | v' \\rangle + \\cdot \\left( \\frac{\\partial \\mu}{\\partial x} \\right)_{R_e} \\langle v | x | v' \\rangle\n",
+    "+  \\frac{1}{2} \\left( \\frac{\\partial^2 \\mu}{\\partial x^2} \\right)_{R_e} \\langle v | x^2 | v' \\rangle\n",
+    "+ \\dots\n",
     "  $$\n",
     "\n",
-    "Each term corresponds to an **expectation value** of powers of ( x ) in the vibrational basis.\n",
-    "We can interpret these terms as follows:\n",
+    "- Each term corresponds to an **expectation value** of powers of ( x ) in the vibrational basis. We can interpret these terms as follows:\n",
     "\n",
-    "* **First term:** $\\mu_e \\langle v | v' \\rangle = 0 $ for $v \\neq v'$ because the vibrational wavefunctions are orthogonal.\n",
-    "* **Second term:** The term involving $\\langle v | x | v' \\rangle$ can be nonzero **only if** the dipole moment changes with internuclear distance, i.e., $\\frac{\\partial \\mu}{\\partial R} \\neq 0$.\n",
-    "* **Higher-order terms:** Usually small, but can contribute to overtones ($\\Delta v = 2, 3, \\dots $) when $\\mu(R)$  is strongly anharmonic.\n",
+    "  * **First term:** $\\mu_e \\langle v | v' \\rangle = 0 $ for $v \\neq v'$ because the vibrational wavefunctions are orthogonal.\n",
+    "  * **Second term:** The term involving $\\langle v | x | v' \\rangle$ can be nonzero **only if** the dipole moment changes with internuclear distance, i.e., $\\frac{\\partial \\mu}{\\partial x} \\neq 0$.\n",
+    "  * **Higher-order terms:** Usually small, but can contribute to overtones ($\\Delta v = 2, 3, \\dots $) when $\\mu(R)$  is strongly anharmonic.\n",
     "\n",
     ":::{admonition} **Selection Rule**\n",
     ":class: important \n",
@@ -515,7 +500,7 @@
     "A **vibrational transition is allowed** only if the molecular dipole moment **changes with the bond length**:\n",
     "\n",
     "$$\n",
-    "\\left( \\frac{\\partial \\mu}{\\partial R} \\right)_{R_e} \\neq 0.\n",
+    "\\left( \\frac{\\partial \\mu}{\\partial x} \\right)_{R_e} \\neq 0.\n",
     "$$\n",
     "\n",
     "\n",
