--- a/_sources/ch04/note03B.ipynb
+++ b/_sources/ch04/note03B.ipynb
@@ -468,7 +468,7 @@
    "source": [
     "### Selection rules and Transition Dipole Moment\n",
     "\n",
-    "- Selection rules in spectroscopy are fundamental principles that dictate whether a transition is allowed or forbidden during the absorption or emission of electromagnetic radiation, such as infrared (IR) or Raman spectroscopy. The origins of these rules lie in the quantum mechanical description of molecular vibrations and the interactions of molecules with electromagnetic radiation. Meaning is that the light can induce coupling between the initial and final quantum states\n",
+    "- Selection rules in spectroscopy are fundamental principles that dictate whether a transition is allowed or forbidden during the absorption or emission of electromagnetic radiation, such as infrared (IR) or Raman spectroscopy. The origins of these rules lie the fact that photon can induce coupling between the initial and final quantum states only under specific conditions. \n",
     "\n",
     "- In spectroscopy, **allowed transitions** are those with a **non-zero transition dipole moment** between the initial and final states.\n",
     "\n",
@@ -487,40 +487,35 @@
     "+ \\dots\n",
     "  $$\n",
     "\n",
-    "- Each term corresponds to an **expectation value** of powers of ( x ) in the vibrational basis. We can interpret these terms as follows:\n",
+    "- Each term corresponds to an **expectation value** of powers of $x$. We can interpret these terms as follows:\n",
     "\n",
     "  * **First term:** $\\mu_e \\langle v | v' \\rangle = 0 $ for $v \\neq v'$ because the vibrational wavefunctions are orthogonal.\n",
     "  * **Second term:** The term involving $\\langle v | x | v' \\rangle$ can be nonzero **only if** the dipole moment changes with internuclear distance, i.e., $\\frac{\\partial \\mu}{\\partial x} \\neq 0$.\n",
     "  * **Higher-order terms:** Usually small, but can contribute to overtones ($\\Delta v = 2, 3, \\dots $) when $\\mu(R)$  is strongly anharmonic.\n",
     "\n",
-    ":::{admonition} **Selection Rule**\n",
+    ":::{admonition} **Selection Rules for harmonic oscillator**\n",
     ":class: important \n",
     "\n",
     "\n",
-    "A **vibrational transition is allowed** only if the molecular dipole moment **changes with the bond length**:\n",
+    "- A **vibrational transition is allowed** only if the molecular dipole moment **changes with the bond length**:\n",
     "\n",
     "$$\n",
     "\\left( \\frac{\\partial \\mu}{\\partial x} \\right)_{R_e} \\neq 0.\n",
     "$$\n",
     "\n",
-    "\n",
     "$$P_{v\\rightarrow v'} \\sim \\langle v | x | v' \\rangle $$\n",
     "\n",
     "$$\\Delta v = \\pm 1$$\n",
     "\n",
-    "- $P_{v\\rightarrow v'}$ probability of making transition from $v$ to $v'$ vibrational energy level\n",
+    "- $P_{v\\rightarrow v'}$ probability of making transition from $v$ to $v'$ vibrational energy level \n",
     "\n",
-    ":::\n",
-    "\n",
-    "- This is why homonuclear diatomic molecules (like $\\mathrm{N_2}$, $\\mathrm{O_2} $)—whose dipole moment does not vary with $R$—do **not** show infrared absorption, while heteronuclear molecules (like $\\mathrm{CO}$, ( $\\mathrm{HCl}$) do."
+    ":::"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Application of selection rules\n",
-    "\n",
     "\n",
     ":::{figure-md} markdown-fig\n",
     "<img src=\"images/selection_rule.jpg\" alt=\"amide-ir\" class=\"bg-primary mb-1\" width=\"400px\">\n",
@@ -530,7 +525,7 @@
     "\n",
     "- All homonuclear diatomic molecules (e.g., $H_2$, $O_2$, etc.) have zero dipole moment, which cannot change as a function of $R$. Hence these molecules do not show vibrational spectra. \n",
     "- In general, all molecules that have dipole moment have vibrational spectra as change in $R$ also results in change of dipole moment. We still have the integral present in the second term. \n",
-    "- For harmonic oscillator wavefunctions, this integral is zero unless $v'' = v'\\pm 1$ . This provides an additional selection rule, which says that the vibrational quantum number may either decrease or increase by one."
+    "- For harmonic oscillator approximation, this integral is zero unless $v'' = v'\\pm 1$ . This provides an additional selection rule, which says that the vibrational quantum number may either decrease or increase by one."
    ]
   },
   {
