--- a/_sources/ch04/note04.ipynb
+++ b/_sources/ch04/note04.ipynb
@@ -21,18 +21,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### L vs p Overview\n",
+    "| **Property**                | **Linear Momentum**                               | **Angular Momentum**                              |   \n",
+    "| --------------------------- | ------------------------------------------------- | ------------------------------------------------- | \n",
+    "| **Physical nature**         | Motion along a straight line                      | Rotation about an axis                            |    \n",
+    "| **Vector form**             | $\\vec{p} = m\\vec{v}$                              | $\\vec{L} = \\vec{r} \\times \\vec{p}$                |  \n",
+    "| **Effective mass**          | $m$                                               | $I = m r^2$                                       |   \n",
+    "| **Velocity**                | $v$                                               | $\\omega=\\frac{v}{r}$                              |\n",
+    "| **Magnitude (scalar form)** | $\\mid\\vec{p}\\mid   = m v$                         | $\\mid\\vec{L}\\mid  = I \\omega$                     |\n",
+    "| **Kinetic energy**          | $E_k = \\dfrac{p^2}{2m}$                           | $E_\\text{rot} = \\dfrac{L^2}{2I}$                  |    \n",
+    "| **Quantum operator**        | $\\hat{p}_x = -i\\hbar\\dfrac{\\partial}{\\partial x}$ | $\\hat{L}_x = \\hat{y}\\hat{p}_z - \\hat{z}\\hat{p}_y$ |    \n",
+    "| **Conservation law**        | Conserved if no net **external force** acts       | Conserved if no net **external torque** acts      |    \n",
+    "| **Conservation condition**  | $\\sum \\vec{F}_\\text{ext} = 0$                     | $\\sum \\vec{\\tau}_\\text{ext} = 0$                  |    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ":::{admonition} **veloctiy vs angular velocity**\n",
+    ":class: tip, dropdown\n",
     "\n",
-    "| Property                  | Linear Momentum              | Angular Momentum             |\n",
-    "|---------------------------|-----------------------------|------------------------------|\n",
-    "| Nature                    | Linear motion in a straight line | Rotational motion around an axis |\n",
-    "| Vector   form            | $\\vec{p} = m \\cdot \\vec{v}$            | $\\vec{L} = \\vec{p}\\times\\vec{r}$        |\n",
-    "| Scalar form               | $ \\|\\vec{p}\\| = m \\cdot v$            | $ \\|\\vec{L}\\| = I \\cdot \\omega$        |\n",
-    "| Mass for point particles       | $m$            | $I=mr^2$        |\n",
-    "| Kinetic Energy           | $\\frac{p^2}{2m}$            | $\\frac{L^2}{2I}$         |\n",
-    "| QM operators              | $\\hat{p_x}=-i\\hbar\\frac{\\partial}{\\partial x}$           | ${\\hat{L_x} = yp_z - zp_y}$           |\n",
-    "| Conservation Principle    | Law of Conservation of Linear Momentum | Law of Conservation of Angular Momentum |\n",
-    "| Conservation Condition    | No net external force acting on a closed system | No net external torque acting on a closed system |"
+    "In circular motion, **angular velocity** ($\\omega$) measures how fast the angle changes, while **linear velocity** ($v$) measures how fast the object moves along the circular path.\n",
+    "\n",
+    "For a full rotation, the **arc length** traveled is related to the **angle** by\n",
+    "\n",
+    "$$s = r\\theta.$$\n",
+    "\n",
+    "Differentiating with respect to time gives\n",
+    "\n",
+    "$$\\frac{ds}{dt} = r\\frac{d\\theta}{dt},$$\n",
+    "\n",
+    "or equivalently,\n",
+    "\n",
+    "$$v = r\\omega \\quad \\Rightarrow \\quad \\omega = \\frac{v}{r}.$$\n",
+    "\n",
+    "Thus, angular velocity is the **rate of rotation per unit radius**—objects farther from the axis move faster linearly for the same angular speed.\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "\n",
+    ":::{admonition} **Moment of inertia**\n",
+    ":class: tip, dropdown\n",
+    "\n",
+    "\n",
+    "Consider a rigid body rotating about a fixed axis with **angular velocity** $\\omega$. \n",
+    "Each particle $i$ of mass $m_i$ at distance $r_i$ from the axis moves with **linear velocity**\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "v_i = r_i \\omega.\n",
+    "$$\n",
+    "\n",
+    "The **kinetic energy** of that particle is\n",
+    "\n",
+    "$$\n",
+    "E_i = \\tfrac{1}{2} m_i v_i^2 = \\tfrac{1}{2} m_i (r_i \\omega)^2 = \\tfrac{1}{2} m_i r_i^2 \\omega^2.\n",
+    "$$\n",
+    "\n",
+    "For the whole body, total rotational kinetic energy is the sum over all particles:\n",
+    "\n",
+    "$$\n",
+    "E_\\text{rot} = \\sum_i E_i = \\tfrac{1}{2} \\omega^2 \\sum_i m_i r_i^2.\n",
+    "$$\n",
+    "\n",
+    "We define the term in parentheses as the **moment of inertia**:\n",
+    "\n",
+    "$$\n",
+    "I = \\sum_i m_i r_i^2,\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "E_\\text{rot} = \\tfrac{1}{2} I \\omega^2.\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "**Interpretation**\n",
+    "\n",
+    "The $r_i^2$ factor naturally appears from the **kinetic energy** of rotational motion—it weights each mass element by how far it lies from the axis, determining its contribution to rotational inertia.\n",
+    "\n",
+    ":::\n",
+    "\n",
+    "\n",
+    ":::{admonition} **Conservation of momenta**\n",
+    ":class: tip, dropdown\n",
+    "\n",
+    "* **Linear momentum** is defined as $\\vec{p} = m\\vec{v}$\n",
+    "\n",
+    "\n",
+    "From Newton’s second law,\n",
+    "\n",
+    "$$\n",
+    "\\frac{d\\vec{p}}{dt} = \\sum \\vec{F}*\\text{ext}.\n",
+    "$$\n",
+    "\n",
+    "Thus, when **no external force** acts on a system,\n",
+    "\n",
+    "$$\n",
+    "  \\sum \\vec{F}*\\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{p}}{dt} = 0,\n",
+    "$$\n",
+    "\n",
+    "meaning **linear momentum is conserved**.\n",
+    "\n",
+    "* **Angular momentum** is defined as ( \\vec{L} = \\vec{r} \\times \\vec{p} ).\n",
+    "\n",
+    "\n",
+    "  Taking the time derivative gives\n",
+    "  $$\n",
+    "  \\frac{d\\vec{L}}{dt} = \\vec{r} \\times \\frac{d\\vec{p}}{dt} = \\sum \\vec{\\tau}*\\text{ext}.\n",
+    "  $$\n",
+    "  Therefore, when **no external torque** acts on the system,\n",
+    "    \n",
+    "$$\n",
+    "  \\sum \\vec{\\tau}*\\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{L}}{dt} = 0,\n",
+    "$$\n",
+    "  so **angular momentum is conserved**.\n",
+    "\n",
+    "**Summary:**\n",
+    "\n",
+    "* No external **force** → **linear momentum** conserved.\n",
+    "* No external **torque** → **angular momentum** conserved.\n",
+    ":::"
    ]
   },
   {
@@ -70,6 +179,38 @@
     "\n",
     "$${\\vec{L}^2 = \\vec{L}\\cdot\\vec{L} = L_x^2 + L_y^2 + L_z^2}$$\n",
     ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Classical picture: Rotating dumbbell\n",
+    "\n",
+    "\n",
+    ":::{figure-md} markdown-fig\n",
+    "<img src=\"./images/conserv_L.png\" alt=\"DeD0\" class=\"bg-primary mb-1\" width=\"300px\">\n",
+    "\n",
+    "Conservation of angular momentum: In the absence of torque angular momentum of conservative system remains constant. This has implications for rotational motion, for instance you can rotate faster if you decreese moment of inertia and vice versa.\n",
+    ":::\n",
+    "\n",
+    "\n",
+    "- The rigid rotor is a model of a rotating dumbbell: two unequal masses held together via a rigid stick.  The system is not acted upon by any external potential; hence the only energy is the kinetic energy of rotation: \n",
+    "\n",
+    "$$\n",
+    "K=\\frac{m_1 v_1^2}{2}+\\frac{m_2 v_2^2}{2}=\\frac{m_1 r_1^2+m_2 r^2_2}{2}\\omega^2\n",
+    "$$\n",
+    "\n",
+    "- Where we have plugged in $v_1=\\omega r_1$ and $v_2=\\omega_2 r$ velocities of rotation of two masses rotating with frequency $\\omega$. The classical mechanical problem of two masses is once again reducible to a single reduced mass $\\mu$ rotating around constant radius $r=r_1+r_2$ rotating around center of mass $m_1 r_1=m_2 r_2$.\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "K=\\frac{I \\omega^2}{2}=\\frac{L^2}{2I}\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "- here $L=I \\omega$ is the angular momentum, the $I=\\mu r^2$ is moment of inertia and $\\mu=\\frac{m_1 m_2}{m_1+m_2}$"
    ]
   },
   {
@@ -216,33 +357,20 @@
     ":::{admonition} **Solution**\n",
     ":class: note, dropdown\n",
     "\n",
-    "To solve the eigenvalue problem for $\\hat{L}_z$, we write:\n",
+    "The eigenvalue equation is:\n",
     "\n",
     "$$\\hat{L}_z f(\\phi) = a f(\\phi)$$\n",
     "\n",
-    "Substituting $\\hat{L}_z = -i\\hbar\\frac{\\partial}{\\partial\\phi}$:\n",
+    "Substituting the operator gives\n",
     "\n",
-    "$$-i\\hbar \\frac{\\partial f}{\\partial \\phi} = a f$$\n",
+    "$$-i\\hbar\\frac{df}{d\\phi} = a f(\\phi)$$\n",
     "\n",
-    "Rearranging, we find:\n",
     "\n",
-    "$$\\frac{1}{f} \\frac{\\partial f}{\\partial \\phi} = \\frac{a}{-i\\hbar}$$\n",
+    "$$f(\\phi) = e^{im\\phi}, \\quad a = \\hbar m$$\n",
     "\n",
-    "This equation can be solved by recognizing that $\\frac{\\partial \\ln f}{\\partial \\phi} = \\frac{a}{-i\\hbar}$:\n",
+    "Thus, the eigenfunctions of $\\hat{L}_z$ are $e^{im\\phi}$ and the corresponding eigenvalues are $\\hbar m$, where $m$ is an integer quantum number.\n",
     "\n",
-    "$$f(\\phi) = e^{\\frac{a}{-i\\hbar} \\phi} = e^{im\\phi}$$\n",
-    "\n",
-    "where \\(m\\) is an integer for the function $f(\\phi)$ to be single-valued over $0 \\leq \\phi < 2\\pi$.\n",
-    "\n",
-    "Thus, we identify the eigenvalues $a = \\hbar m$, giving:\n",
-    "\n",
-    "$$a = \\hbar m \\quad \\text{and} \\quad f(\\phi) = e^{im\\phi}$$\n",
-    "\n",
-    "where $m$ is the quantum number associated with the angular momentum eigenvalue.\n",
-    "\n",
-    "$$\\hat{L}_z f(\\phi) = \\hbar m \\cdot f(\\phi)$$\n",
-    "\n",
-    ":::"
+    ":::\n"
    ]
   },
   {
@@ -254,11 +382,12 @@
     "- Unlike linear momentum components of angular momentum do not commute! \n",
     "- This implies that it is not possible to measure any of the Cartesian angular momentum pairs simultaneously with an infinite precision (the Heisenberg uncertainty relation).\n",
     "\n",
-    ":::{admonition}\n",
+    ":::{admonition} **Commutation relations of angular momentum**\n",
     ":class: important\n",
     "\n",
     "$$\n",
-    "{\\left[\\hat{L}_x,\\hat{L}_y\\right] = i\\hbar\\hat{L}_z, \\left[\\hat{L}_y,\\hat{L}_z\\right] = i\\hbar\\hat{L}_x,\\left[\\hat{L}_z,\\hat{L}_x\\right] = i\\hbar\\hat{L}_y} \\\\\n",
+    "{\\left[\\hat{L}_x,\\hat{L}_y\\right] = i\\hbar\\hat{L}_z, \\left[\\hat{L}_y,\\hat{L}_z\\right] = i\\hbar\\hat{L}_x,\\left[\\hat{L}_z,\\hat{L}_x\\right] = i\\hbar\\hat{L}_y} \\\\ \n",
+    "\n",
     "{\\left[\\hat{L}_x,\\vec{\\hat{L}}^2\\right] = \\left[\\hat{L}_y,\\vec{\\hat{L}}^2\\right] = \\left[\\hat{L}_z,\\vec{\\hat{L}}^2\\right] = 0}\n",
     "$$\n",
     "\n",
