--- a/_sources/ch04/note04.ipynb
+++ b/_sources/ch04/note04.ipynb
@@ -217,6 +217,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{figure-md} markdown-fig\n",
+    "<img src=\"./images/Angular_momentum_conservation.gif\" alt=\"DeD0\" class=\"bg-primary mb-1\" width=\"450px\">\n",
+    "\n",
+    "Angular momentum conservation\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Spherical coordinates\n",
     "\n",
     "- Spherical coordinates are more convenient for rotational problems where we replace $(x,y,z)$ by $(r, \\phi, \\theta)$. \n",
