--- a/ch04/note04.ipynb
+++ b/ch04/note04.ipynb
@@ -148,6 +148,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    ":::{admoniion} **Noether's beautiful theorem**\n",
+    ":class: tip\n",
+    "\n",
+    "- Noether’s theorem is one of the most profound connections between **symmetry** and **conservation laws** in physics. It states that:\n",
+    "\n",
+    "> **Every continuous symmetry of the laws of physics corresponds to a conserved quantity.**\n",
+    "\n",
+    "- In quantum mechanics, this means that if a system’s Hamiltonian is unchanged (invariant) under a certain transformation, there exists a corresponding conserved observable:\n",
+    "\n",
+    "    * **Translational symmetry** → conservation of **momentum**\n",
+    "    * **Rotational symmetry** → conservation of **angular momentum**\n",
+    "    * **Time-translation symmetry** → conservation of **energy**\n",
+    ":::\n",
+    "\n",
+    "\n",
+    ":::{figure-md} markdown-fig\n",
+    "\n",
+    "<img src=\"./images/E-noether.png\" alt=\"DeD0\" class=\"bg-primary mb-1\" width=\"300px\">\n",
+    "\n",
+    "Emily Noether a german mathematician who made important contirbutions to mathematics and physics. She also proved Noether's first and second theorems, which are fundamental in mathematical physics. See more about her [here](https://en.wikipedia.org/wiki/Emmy_Noether)\n",
+    "\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Classical angular momentum \n",
     "\n",
     ":::{figure-md} markdown-fig\n",
