--- a/ch04/note04.ipynb
+++ b/ch04/note04.ipynb
@@ -118,19 +118,21 @@
     "Thus, when **no external force** acts on a system,\n",
     "\n",
     "$$\n",
-    "  \\sum \\vec{F}*\\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{p}}{dt} = 0,\n",
+    "  \\sum \\vec{F}\\cdot \\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{p}}{dt} = 0,\n",
     "$$\n",
     "\n",
     "meaning **linear momentum is conserved**.\n",
     "\n",
-    "* **Angular momentum** is defined as ( \\vec{L} = \\vec{r} \\times \\vec{p} ).\n",
+    "* **Angular momentum** is defined as $\\vec{L} = \\vec{r} \\times \\vec{p}$.\n",
     "\n",
     "\n",
     "  Taking the time derivative gives\n",
+    "\n",
     "  $$\n",
     "  \\frac{d\\vec{L}}{dt} = \\vec{r} \\times \\frac{d\\vec{p}}{dt} = \\sum \\vec{\\tau}*\\text{ext}.\n",
     "  $$\n",
-    "  Therefore, when **no external torque** acts on the system,\n",
+    "\n",
+    "Therefore, when **no external torque** acts on the system,\n",
     "    \n",
     "$$\n",
     "  \\sum \\vec{\\tau}*\\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{L}}{dt} = 0,\n",
