'spherical no dollar'

--- a/ch04/note04.ipynb
+++ b/ch04/note04.ipynb
@@ -453,11 +453,12 @@
     "$${\\hat{L}_zY^m_l(\\theta,\\phi) = \\hbar m \\cdot Y_l^m(\\theta,\\phi)}$$\n",
     "\n",
     "- **Eigenfunctions:** $Y_l^m(\\theta,\\phi) $\n",
-    "- **Angular quantum number:** $l = 0,1,2,3...$ \n",
-    "- **Magnetic quantum number:** $|m| = 0,1,2,3,...l$\n",
+    "- **Angular quantum number:** $l = 0,1,2,...$ \n",
+    "- **Magnetic quantum number:** $|m| \\leq l$ and takes $2l+1$ integer values $(-l, ... 0, ...l)$. \n",
     ":::\n",
     "\n",
     "- Note that here $m$ has nothing to do with magnetism but the name originates from the fact that (electron or nuclear) spins follow the same laws of angular momentum. \n",
+    "- $m$ describes projections of $L$ on z axis. E.g, l=2 there are five projections $(-2, -1 ,0 1, 2)$\n",
     "- Functions $Y_l^m$ are called [spherical harmonics](http://en.wikipedia.org/wiki/Spherical_harmonics). Examples of spherical harmonics with various values of $l$ and $m$ are given below (with [Condon-Shortley](http://en.wikipedia.org/wiki/Spherical_harmonics\\#Condon-Shortley_phase)  [phase convention](http://en.wikipedia.org/wiki/Spherical_harmonics\\#Condon-Shortley_phase)"
    ]
   },
@@ -747,7 +748,7 @@
     "        surfacecolor=fcolors_normalized,\n",
     "        colorscale='rdbu',\n",
     "        showscale=False,\n",
-    "        name=f\"$Y_{{{l},{m}}}$\",\n",
+    "        name=f\"Y_{{{l},{m}}}\",\n",
     "        scene=f'scene{i}'  # Assign each plot to a different scene\n",
     "    ))\n",
     "\n",
@@ -758,9 +759,9 @@
     "    scene2=dict(domain=dict(x=[0.33, 0.66]), xaxis=dict(visible=False), yaxis=dict(visible=False), zaxis=dict(visible=False), aspectmode='cube'),\n",
     "    scene3=dict(domain=dict(x=[0.66, 1]), xaxis=dict(visible=False), yaxis=dict(visible=False), zaxis=dict(visible=False), aspectmode='cube'),\n",
     "    annotations=[\n",
-    "        dict(text=\"$Y_{2,0}$\", x=0.16, y=1.05, showarrow=False, xref=\"paper\", yref=\"paper\", font=dict(size=14)),\n",
-    "        dict(text=\"$Y_{2,1}$\", x=0.5, y=1.05, showarrow=False, xref=\"paper\", yref=\"paper\", font=dict(size=14)),\n",
-    "        dict(text=\"$Y_{2,-1}$\", x=0.83, y=1.05, showarrow=False, xref=\"paper\", yref=\"paper\", font=dict(size=14))\n",
+    "        dict(text=\"Y_{2,0}\", x=0.16, y=1.05, showarrow=False, xref=\"paper\", yref=\"paper\", font=dict(size=14)),\n",
+    "        dict(text=\"Y_{2,1}\", x=0.5, y=1.05, showarrow=False, xref=\"paper\", yref=\"paper\", font=dict(size=14)),\n",
+    "        dict(text=\"Y_{2,-1}\", x=0.83, y=1.05, showarrow=False, xref=\"paper\", yref=\"paper\", font=dict(size=14))\n",
     "    ]\n",
     ")\n",
     "\n",
