--- a/ch04/note04.ipynb
+++ b/ch04/note04.ipynb
@@ -466,6 +466,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    ":::{figure-md} markdown-fig\n",
+    "<img src=\"./images/L_z_quant.png\" alt=\"DeD0\" class=\"bg-primary mb-1\" width=\"450px\">\n",
+    "\n",
+    "**Angular momentum is quantized.** Its magnitude can take specific values dictated by $l$. Projections of angular momentum are also quantized and can take specific discrete values dictated by $m$ which can take $2l+1$ values never exceeding $l$.  \n",
+    ":::\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Spherical harmonics \n",
     "\n",
     "- Spherical harmonics, denoted as $Y_{lm}(\\theta, \\phi)$ or $|l, m\\rangle$ are important in many theoretical and practical applications, e.g., the representation of multipole electrostatic and electromagnetic fields, computation of [atomic orbital](https://en.wikipedia.org/wiki/Atomic_orbital) [electron configurations](https://en.wikipedia.org/wiki/Electron_configuration), representation of gravitational fields,  MRI imaging for streamline tractography, and the magnetic fields of planetary bodies and stars.\n",
