--- a/_sources/ch04/note04.ipynb
+++ b/_sources/ch04/note04.ipynb
@@ -102,55 +102,17 @@
     "\n",
     ":::\n",
     "\n",
-    "\n",
-    ":::{admonition} **Conservation of momenta**\n",
-    ":class: tip, dropdown\n",
-    "\n",
-    "* **Linear momentum** is defined as $\\vec{p} = m\\vec{v}$\n",
-    "\n",
-    "\n",
-    "From Newton’s second law,\n",
-    "\n",
-    "$$\n",
-    "\\frac{d\\vec{p}}{dt} = \\sum \\vec{F}*\\text{ext}.\n",
-    "$$\n",
-    "\n",
-    "Thus, when **no external force** acts on a system,\n",
-    "\n",
-    "$$\n",
-    "  \\sum \\vec{F}\\cdot \\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{p}}{dt} = 0,\n",
-    "$$\n",
-    "\n",
-    "meaning **linear momentum is conserved**.\n",
-    "\n",
-    "* **Angular momentum** is defined as $\\vec{L} = \\vec{r} \\times \\vec{p}$.\n",
-    "\n",
-    "\n",
-    "  Taking the time derivative gives\n",
-    "\n",
-    "  $$\n",
-    "  \\frac{d\\vec{L}}{dt} = \\vec{r} \\times \\frac{d\\vec{p}}{dt} = \\sum \\vec{\\tau}*\\text{ext}.\n",
-    "  $$\n",
-    "\n",
-    "Therefore, when **no external torque** acts on the system,\n",
-    "    \n",
-    "$$\n",
-    "  \\sum \\vec{\\tau}*\\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{L}}{dt} = 0,\n",
-    "$$\n",
-    "  so **angular momentum is conserved**.\n",
-    "\n",
-    "**Summary:**\n",
-    "\n",
-    "* No external **force** → **linear momentum** conserved.\n",
-    "* No external **torque** → **angular momentum** conserved.\n",
-    ":::"
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ":::{admoniion} **Noether's beautiful theorem**\n",
+    "### Conservation of momentum is due to symmetry\n",
+    "\n",
+    "\n",
+    ":::{admonition} **Noether's beautiful theorem**\n",
     ":class: tip\n",
     "\n",
     "- Noether’s theorem is one of the most profound connections between **symmetry** and **conservation laws** in physics. It states that:\n",
@@ -171,6 +133,49 @@
     "\n",
     "Emily Noether a german mathematician who made important contirbutions to mathematics and physics. She also proved Noether's first and second theorems, which are fundamental in mathematical physics. See more about her [here](https://en.wikipedia.org/wiki/Emmy_Noether)\n",
     "\n",
+    ":::\n",
+    "\n",
+    "\n",
+    ":::{admonition} **Conservation of momenta**\n",
+    ":class: tip, dropdown\n",
+    "\n",
+    "* **Linear momentum** is defined as $\\vec{p} = m\\vec{v}$\n",
+    "\n",
+    "\n",
+    "From Newton’s second law,\n",
+    "\n",
+    "$$\n",
+    "\\frac{d\\vec{p}}{dt} = \\sum \\vec{F}_\\text{ext}.\n",
+    "$$\n",
+    "\n",
+    "Thus, when **no external force** acts on a system,\n",
+    "\n",
+    "$$\n",
+    "  \\sum \\vec{F}_\\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{p}}{dt} = 0,\n",
+    "$$\n",
+    "\n",
+    "meaning **linear momentum is conserved**.\n",
+    "\n",
+    "* **Angular momentum** is defined as $\\vec{L} = \\vec{r} \\times \\vec{p}$.\n",
+    "\n",
+    "\n",
+    "  Taking the time derivative gives\n",
+    "\n",
+    "  $$\n",
+    "  \\frac{d\\vec{L}}{dt} = \\vec{r} \\times \\frac{d\\vec{p}}{dt} = \\sum \\vec{\\tau}_\\text{ext}.\n",
+    "  $$\n",
+    "\n",
+    "Therefore, when **no external torque** acts on the system,\n",
+    "    \n",
+    "$$\n",
+    "  \\sum \\vec{\\tau}_\\text{ext} = 0 ;\\Rightarrow; \\frac{d\\vec{L}}{dt} = 0,\n",
+    "$$\n",
+    "  so **angular momentum is conserved**.\n",
+    "\n",
+    "**Summary:**\n",
+    "\n",
+    "* No external **force** → **linear momentum** conserved.\n",
+    "* No external **torque** → **angular momentum** conserved.\n",
     ":::"
    ]
   },
@@ -505,7 +510,7 @@
     "   - If $ m = 0 $, there are no azimuthal nodes, as seen in $ Y_{00} $ and $ Y_{10} $.\n",
     "   - For $ m = \\pm 1 $, a single azimuthal node occurs (e.g., $ Y_{1-1} $, $ Y_{2-1} $), and for $ m = \\pm 2 $, two azimuthal nodes appear (e.g., $ Y_{2-2} $).\n",
     "\n",
-    "3. **Total Nodes:** equal to sum of nodes coming from polar and longitudinal nodes and are exactly equal to $l$. E. gl=0 no nodes, l=4 four nodes. \n",
+    "3. **Total Nodes:** equal to sum of nodes coming from polar and longitudinal nodes and are exactly equal to $l$. For instance $l=0$ no nodes, $l=4$ four nodes. \n",
     "\n",
     "\n",
     "#### Orthogonality of Spherical Harmonics\n",
