--- a/_sources/ch04/note04.ipynb
+++ b/_sources/ch04/note04.ipynb
@@ -742,6 +742,8 @@
    },
    "outputs": [],
    "source": [
+    "import plotly.io as pio\n",
+    "pio.renderers.default = \"plotly_mimetype\"   # interactive in Jupyter-Book\n",
     "import numpy as np\n",
     "import plotly.graph_objects as go\n",
     "from scipy.special import sph_harm\n",
