--- a/_sources/ch04/note04.ipynb
+++ b/_sources/ch04/note04.ipynb
@@ -115,11 +115,9 @@
     ":::{admonition} **Noether's beautiful theorem**\n",
     ":class: tip\n",
     "\n",
-    "- Noether’s theorem is one of the most profound connections between **symmetry** and **conservation laws** in physics. It states that:\n",
-    "\n",
     "> **Every continuous symmetry of the laws of physics corresponds to a conserved quantity.**\n",
     "\n",
-    "- In quantum mechanics, this means that if a system’s Hamiltonian is unchanged (invariant) under a certain transformation, there exists a corresponding conserved observable:\n",
+    "- In quantum mechanics, this means that if a system’s Hamiltonian is unchanged (invariant) under a certain transformation (e.g time change, rotation or translation), there exists a corresponding conserved observable:\n",
     "\n",
     "    * **Translational symmetry** → conservation of **momentum**\n",
     "    * **Rotational symmetry** → conservation of **angular momentum**\n",
