--- a/ch06/lin_var.ipynb
+++ b/ch06/lin_var.ipynb
@@ -267,6 +267,11 @@
     "\n",
     "$$\\mathbf{H} = \\frac{\\hbar^2a^3}{m} \\begin{bmatrix} \\frac{1}{6} & \\frac{a^2}{30}\\\\ \\frac{a^2}{30} & \\frac{a^4}{105} \\end{bmatrix}$$\n",
     "\n",
+    "Similarily one could carry out all the integrals for $\\mathbf{S}$\n",
+    "\n",
+    "\n",
+    "$$\\mathbf{S} = \\frac{a^5}{10} \\begin{bmatrix} \\frac{1}{3} & \\frac{a^2}{14}\\\\ \\frac{a^2}{14} & \\frac{a^4}{63} \\end{bmatrix}$$\n",
+    "\n",
     ":::"
    ]
   },
@@ -274,7 +279,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have obtaind all matrix elements in previous sectio. The $\\mathbf{S}$ is\n",
+    "- We have obtaind all matrix elements in previous section and are now ready to obtain eigenvalues\n",
+    "\n",
+    "$$\\mathbf{H} = \\frac{\\hbar^2a^3}{m} \\begin{bmatrix} \\frac{1}{6} & \\frac{a^2}{30}\\\\ \\frac{a^2}{30} & \\frac{a^4}{105} \\end{bmatrix}$$\n",
     "\n",
     "$$\\mathbf{S} = \\frac{a^5}{10} \\begin{bmatrix} \\frac{1}{3} & \\frac{a^2}{14}\\\\ \\frac{a^2}{14} & \\frac{a^4}{63} \\end{bmatrix}$$"
    ]
