--- a/_sources/ch06/lin_var.ipynb
+++ b/_sources/ch06/lin_var.ipynb
@@ -220,6 +220,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "\n",
+    "\n",
+    ":::{admonition} **Computing the matrix elements**\n",
+    ":class tip, dropdown\n",
+    "\n",
     "In this problem, we have two basis functions\n",
     "\n",
     "$$f_1(x) = x(a-x)$$\n",
@@ -228,7 +233,7 @@
     "\n",
     "$$f_2(x) = x^2(a-x)^2$$\n",
     "\n",
-    "### Computing the matrix elements:\n",
+    "now the task of computing matrix elements comes down to forming integrals with these two and carrying out integration\n",
     "\n",
     "$$H_{11} = \\langle x(a-x)|\\hat{H}|x(a-x)\\rangle$$\n",
     "\n",
@@ -246,13 +251,8 @@
     "\n",
     "Thus\n",
     "\n",
-    "$$H_{11} = -a\\frac{-\\hbar^2a^2}{2m} + \\frac{-\\hbar^2a^3}{3m} = \\frac{\\hbar^2a^3}{6m}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "$$H_{11} = -a\\frac{-\\hbar^2a^2}{2m} + \\frac{-\\hbar^2a^3}{3m} = \\frac{\\hbar^2a^3}{6m}$$\n",
+    "\n",
     "$$H_{22} = \\langle x^2(a-x)^2|\\hat{H}|x^2(a-x)^2\\rangle$$\n",
     "\n",
     "$$ = \\langle a^2x^2|\\hat{H}|a^2x^2\\rangle -2\\langle a^2x^2|\\hat{H}|2ax^3\\rangle + \\langle a^2x^2|\\hat{H}|x^4\\rangle -2\\langle ax^3|\\hat{H}|a^2x^2\\rangle + 4\\langle ax^3|\\hat{H}|ax^3\\rangle -2\\langle ax^3|\\hat{H}|x^4\\rangle + \\langle x^4|\\hat{H}|a^2x^2\\rangle - 2\\langle x^4|\\hat{H}|ax^3\\rangle + \\langle x^4|\\hat{H}|x^4\\rangle$$\n",
@@ -265,14 +265,16 @@
     "\n",
     "We can now complete the Hamiltonian matrix, $\\mathbf{H}$,\n",
     "\n",
-    "$$\\mathbf{H} = \\frac{\\hbar^2a^3}{m} \\begin{bmatrix} \\frac{1}{6} & \\frac{a^2}{30}\\\\ \\frac{a^2}{30} & \\frac{a^4}{105} \\end{bmatrix}$$"
+    "$$\\mathbf{H} = \\frac{\\hbar^2a^3}{m} \\begin{bmatrix} \\frac{1}{6} & \\frac{a^2}{30}\\\\ \\frac{a^2}{30} & \\frac{a^4}{105} \\end{bmatrix}$$\n",
+    "\n",
+    ":::"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can also be shown that $\\mathbf{S}$ is\n",
+    "We have obtaind all matrix elements in previous sectio. The $\\mathbf{S}$ is\n",
     "\n",
     "$$\\mathbf{S} = \\frac{a^5}{10} \\begin{bmatrix} \\frac{1}{3} & \\frac{a^2}{14}\\\\ \\frac{a^2}{14} & \\frac{a^4}{63} \\end{bmatrix}$$"
    ]
